--- a/css/styles.css
+++ b/css/styles.css
@@ -219,15 +219,15 @@ footer {
 }
 
 .firstt {
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1106919230265364573/wallpaperflare.com_wallpaper_1_1.webp);
+    background-image: url(../images/couch.webp);
 }
 
 .secondd {
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1106922109898342453/wallpaperflare.com_wallpaper_1.webp);
+    background-image: url(../images/garden.webp);
 }
 
 .thirdd {
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1106937856586432572/wallpaperflare.com_wallpaper-_1__1.webp);
+    background-image: url(../images/castle.webp);
 }
 
 .article1 {
@@ -243,7 +243,7 @@ footer {
     grid-area: image1;
     width: 25em;
     height: 25em;
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1051573220857368576/botanical-garden-experiments.jpg);
+    background-image: url(../images/botanical-garden-experiments.webp);
     background-size: 190%;
     background-repeat: no-repeat;
     background-position: center;
@@ -315,7 +315,7 @@ button:hover {
     grid-area: image2;
     width: 25em;
     height: 25em;
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1051829692249948221/ezgif.com-gif-maker.jpg);
+    background-image: url(../images/new-garden.webp);
     background-size: 190%;
     background-repeat: no-repeat;
     background-position: center;
